# mcp-selenium-python

./: README.md  pyproject.toml
client/: client.py  llm_client.py
server/: custom_context.py  log_writer.py  mcp_selenium_server.py
server/actions/: base_action.py  click_action.py  input_action.py  navigate_action.py
server/engine/: driver_session_manager.py  locator_strategy.py  webdriver_factory.py
server/tools/: mcp_tools.py  tool_facade.py  webtools.py
